src/css/custom.css
/* ... */
/* TOC styles moved to modern sidebar section below */

.docs-wrapper aside {
  @apply border-0;
}

/* Blog List Page */

.case-study-header {
  background-color: #000000;
  @apply w-full rounded-lg;
}

.center {
  text-align: center;
  /* needed so that blog post heading is centered in the single blog post view */
}

/*

.blog-list-page {
  @apply max-w-screen-lg mx-auto px-10 my-16;
}
.blog-list-page main {
  @apply flex flex-col space-y-12 max-w-screen-lg mx-auto;
}
.blog-list-page aside {
  @apply text-sm mr-10 px-2;
}
.blog-list-page .post-header {
  @apply items-start;
}
.blog-list-page article img {
  @apply -mb-3 shadow-lg;
}



.blog-tags-post-page aside {
  @apply text-sm mr-10 px-2;
}

.blog-tags-post-page main {
  @apply flex flex-col space-y-12 max-w-screen-lg mx-auto;
}

*/

.blog-tags-post-page {
  @apply mx-auto my-16 max-w-screen-lg px-10;
}

/* Navbar */
.navbar {
  background: #fff;
  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
  box-shadow: none;
  padding: 0.5rem 0;
}

html[data-theme="dark"] .navbar {
  background: #141414;
  border-bottom: 1px solid rgba(255, 255, 255, 0.08);
}

.navbar__inner {
  @apply mx-auto w-full max-w-none px-4 lg:px-10;
}

.navbar__items--right {
  @apply ml-auto flex-row-reverse justify-end;
  gap: 12px;
}

.navbar__items--right > :last-child {
  @apply pr-0;
}

.navbar__brand {
  @apply mb-0;
}

.navbar__brand img {
  height: 32px;
}

/* Search box styling */

/* Search */

.DocSearch-Button {
  @apply rounded-lg px-3 py-2 !important;
}

.button.button--secondary.button--outline:not(.button--active):not(:hover) {
  color: #ffffff;
}

/* Footer */

footer svg {
  display: inline;
}

.footer .footer__svg {
  @apply m-8 inline fill-current;
}

.footer .footer__link-item span svg {
  @apply hidden;
}

@media (max-width: 996px) {
  .footer .footer__separators {
    display: none;
  }

  .DocSearch-Button {
    @apply mr-2 !important;
  }

  /* .footer .footer__block {
    display: block;
  } */
  .footer__copyright+div {
    text-align: center;
  }

  .footer__icons.footer {
    text-align: center;
  }
}

/* Docs */

.docusaurus-highlight-code-line {
  background-color: rgb(72, 77, 91);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

.docs-image-centered {
  display: block;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 25px;
}

.docs-image-max-width-20 {
  width: 20%;
}

.docs-image-max-width-50 {
  width: 50%;
}

.hero--primary {
  background-color: var(--ifm-color-hero-background-dark);
}

.sr-only {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  margin: -1px;
  overflow: hidden;
  clip: rect(0, 0, 0, 0);
  white-space: nowrap;
  border-width: 0;
}

#mc-embedded-waitlist {
  margin-top: 15px;
}

.related-read-div {
  border-width: 0;
  padding: 7px var(--ifm-alert-padding-horizontal);
  margin-bottom: 0.5em;
}

.related-read-label {
  font-weight: 600;
}

/* Reset margin bottom on h3 (refer docs community section li item heading) after disabling tailwind preflight. */
h3 {
  margin-bottom: 1px;
}

/* Reset any border-radius applied to images inside <td> elements. (see os icons and cross and tick icons in table) */
td img {
  border-radius: 0 !important;
}

.related-read-link {
  margin-left: 7px;
}

.related-read-archetype-tag {
  padding: 3px 6px;
  color: #ffffff;
  font-size: 0.8em;
  border-radius: 6px;
  margin-left: 7px;
}

.archetype-tag-operation-guide {
  background-color: #ca1a7b;
}

.archetype-tag-developer-guide {
  background-color: #ca811a;
}

.archetype-tag-tutorial {
  background-color: #1ac9c7;
}

.archetype-tag-explanation {
  background-color: #78c91a;
}

.archetype-tag-reference {
  background-color: #cf8f19;
}

.docs-image-wrapper {
  position: static;
  width: 100%;
  background-color: #efefef;
  margin: 0 0 15px 0;
  padding: 0;
}

.docs-centered-image-wrapper {
  width: 100%;
  text-align: center;
  margin: 0;
  padding: 15px;
}

.docs-image-title-wrapper {
  width: 100%;
  margin: 0;
  padding: 15px;
  text-align: left;
  font-size: 0.9em;
  font-weight: 300;
  color: #121212;
}

.docs-image-title {
  margin: 0px !important;
}

.docs-centered-image-size-100 {
  max-width: 1024px;
}

.docs-centered-image-size-75 {
  max-width: 768px;
}

.docs-centered-image-size-50 {
  max-width: 640px;
}

.docs-centered-image-size-25 {
  max-width: 400px;
}

@media screen and (max-width: 1024px) {
  .docs-centered-image-size-100 {
    max-width: 100%;
  }

  .docs-centered-image-size-75 {
    max-width: 75%;
  }

  .docs-centered-image-size-50 {
    max-width: 50%;
  }

  .docs-centered-image-size-25 {
    max-width: 25%;
  }
}

.docs-image-legend-wrapper {
  width: 100%;
  margin: 0;
  padding: 15px;
  text-align: left;
  font-size: 0.9em;
  font-weight: 300;
  color: #121212;
}

.docs-image-legend-list {
  margin: 0px !important;
  padding: 0;
  list-style-type: none;
}

.docs-image-legend-symbol {
  font-size: 1.2em;
  font-weight: 600;
}

.scale {
  @apply transition hover:scale-105 motion-reduce:transform-none motion-reduce:transition-none;
}

/* .tableOfContents {
  max-height: calc(100vh - (var(--ifm-navbar-height) + 2rem));
  overflow-y: auto;
  position: sticky;
  top: calc(var(--ifm-navbar-height) + 1rem);
} */

/* hacks to counteract tailwind typography clashing with docusaurus tabs */
.prose .tabs-container > .tabs > .tabs__item::before {
  content: none;
}

.prose .tabs-container > .tabs > .tabs__item {
  padding-left: 1em;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
  margin-bottom: 0em;
  opacity: 0.5;
}

.prose .tabs-container > .tabs > .tabs__item.tabs__item--active {
  opacity: 1;
}

.prose .tabs {
  padding: 0 !important;
}

.prose .tabs-container ul {
  margin: 0;
  margin-bottom: -1.25rem;
}

.prose .tabs-container > .margin-vert--md pre {
  margin: 0;
}

/* otherwise tailwind typography gives very ugly margins on inline images */
.prose li img {
  margin: 0;
}
/* ... */

